ui: Fix collapsable menu for mobile devices

--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -86,7 +86,7 @@ body {
 }
 
 .list-group-item-spaced {
-    padding: 2rem 2rem;
+    padding: 2rem;
 }
 
 .book-card:hover {
